<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_tab_menu">流量谷</string>
    <string name="setting">设置</string>
    <string name="interaction">互动</string>
    <string name="save_data">存流量</string>
    <string name="take_data">取流量</string>
    <string name="make_data">赚流量</string>
    <string name="hello">Hello World, Date!</string>
    <string name="app_name">流量谷</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="forget"><u>忘记密码</u></string>
    <string name="login">登 录</string>
    <string name="regist">注册</string>
    <string name="unregist">注销</string>
    <string name="welcome"> 欢迎使用流量谷</string>
    <string name="gprs">0.00</string>
    <string name="unit">MB</string>
    <string name="data_type_1">话费形式</string>
    <string name="data_type_2">流量形式</string>
    <string name="data_type_3">现金形式</string>
    <string name="take_type">取出形式：</string>
    <string name="usable_data">可用流量</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_activity_send_flows">SendFlows</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_advertisement_detial">AdvertisementDetial</string>
    <string name="title_activity_add_friend">AddFriend</string>
    <string name="register_tip">提示 \n带*项为必填项\n</string>
    <string name="add_attention">一键分享</string>
    <string name="user_rank">好友排名: NO.1</string>
    <string name="user_name">流量谷管理员</string>
    <string name="user_des">流量谷，开启流量的全新时代</string>
    <string name="user_class">流量谷超级用户</string>
    <string name="send_tip">提示 \n赠送流量时请确认好对方帐号！</string>

</resources>