<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/title_bar"
        android:gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/above"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/azure" >

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txt_show_gprs"
                android:layout_alignBottom="@+id/txt_show_gprs"
                android:layout_toRightOf="@+id/txt_show_gprs"
                android:text="@string/unit" />

            <TextView
                android:id="@+id/txt_show_gprs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="26dp"
                android:text="@string/gprs"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

            <Button
                android:id="@+id/btn_take_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txt_show_gprs"
                android:layout_marginRight="17dp"
                android:layout_toLeftOf="@+id/txt_show_gprs"
                android:text="@string/take_data"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/below"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ListView
                android:id="@+id/advertisements"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
            </ListView>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>